src/test/contracts/negative/pattern_matching_anomalies/redundant_case/c1_c2_c1_c3.jsligo
type t = ["One", int] | ["Two", nat] | ["Three"]

let s = (x : t) : unit => 
  match(x, {
    One:   (a : int) => unit,
    Two:   (c : nat) => unit,
    One:   (b : int) => unit,
    Three: () => unit
  })